--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,15 +5,35 @@ on:
     branches:
       - main
 
-permissions:
-  contents: read
-  pull-requests: write
-  packages: write
-
 jobs:
-  container-push-latest:
-    uses: metal-toolbox/container-push/.github/workflows/container-push.yml@main
-    with:
-      name: datumbase
-      tag: latest
-      dockerfile_path: .
+  push_to_registries:
+    name: Push Docker image to multiple registries
+    runs-on: ubuntu-latest
+    permissions:
+      packages: write
+      contents: read
+    steps:
+      - name: Check out the repo
+        uses: actions/checkout@v4
+
+      - name: Docker meta
+        id: meta
+        uses: docker/metadata-action@v5
+        with:
+          images: |
+            ghcr.io/${{ github.repository }}
+    
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+      
+      - name: Build and push Docker images
+        uses: docker/build-push-action@v5.1.0
+        with:
+          context: .
+          push: true
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
