--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,6 +4,8 @@ on:
   push:
     branches:
       - main
+  release:
+    types: [created]
 
 jobs:
   push_to_registries:
@@ -22,6 +24,9 @@ jobs:
         with:
           images: |
             ghcr.io/${{ github.repository }}
+          tags:
+            type=semver,pattern={{version}}
+            type=semver,pattern={{major}}.{{minor}}
     
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v3
