add tags correctly

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,6 +4,8 @@ on:
   push:
     branches:
       - main
+    tags:
+      - 'v*'
   release:
     types: [created]
 
@@ -27,6 +29,8 @@ jobs:
           tags:
             type=ref,event=branch
             type=ref,event=pr
+            type=ref,event=tag
+            type=ref,event=push
             type=semver,pattern={{version}}
             type=semver,pattern={{major}}.{{minor}}
     
