being intelligent is helpful

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,7 +26,7 @@ jobs:
         with:
           images: |
             ghcr.io/${{ github.repository }}
-          tags:
+          tags: |
             type=ref,event=branch
             type=ref,event=pr
             type=ref,event=tag
