do not use nonroot user
Signed-off-by: Golang Lemonade <147884153+golanglemonade@users.noreply.github.com>

--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -4,4 +4,4 @@ tasks:
   build:
     desc: builds the base-ci docker image
     cmds:
-      - docker build -f Dockerfile .
+      - docker build -f Dockerfile . -t base-ci-image:dev
