dont run the build step when its a tag
Signed-off-by: Golang Lemonade <147884153+golanglemonade@users.noreply.github.com>

--- a/.buildkite/pipeline.yaml
+++ b/.buildkite/pipeline.yaml
@@ -9,7 +9,7 @@ steps:
   steps:
   - label: ":docker: docker pr build"
     key: "docker-pr-build"
-    if: build.branch != "main"
+    if: build.branch != "main" && build.tag == null
     commands: |
       #!/bin/bash
       ls
