--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -5,3 +5,10 @@ tasks:
     desc: builds the base-ci docker image
     cmds:
       - docker build -f Dockerfile . -t base-ci-image:dev
+
+  precommit-full:
+    desc: Lint the project against all files
+    cmds:
+      - pre-commit install && pre-commit install-hooks
+      - pre-commit autoupdate
+      - pre-commit run --show-diff-on-failure --color=always --all-files
